[gd_scene load_steps=3 format=3 uid="uid://lobby_state"]

[ext_resource type="Script" path="res://scripts/states/lobby_state.gd" id="1_lobby"]
[ext_resource type="FontFile" path="res://assets/fonts/EurostileBold.tres" id="2_bold_font"]

[node name="LobbyState" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_lobby")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.164706, 0.541176, 1)
theme_override_fonts/font = ExtResource("2_bold_font")
theme_override_font_sizes/font_size = 48
text = "MULTIPLAYER"
horizontal_alignment = 1

[node name="ModeTitle" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898039, 1, 1)
theme_override_fonts/font = ExtResource("2_bold_font")
theme_override_font_sizes/font_size = 24
text = ""
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.533333, 0.533333, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = ""
horizontal_alignment = 1

[node name="CodeLabel" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898039, 1, 1)
theme_override_fonts/font = ExtResource("2_bold_font")
theme_override_font_sizes/font_size = 28
text = "Lobby Code: XXXX"
horizontal_alignment = 1

[node name="PlayersLabel" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 1, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Players:"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="HostPrompt" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_bold_font")
theme_override_font_sizes/font_size = 32
text = "HOST"
horizontal_alignment = 1

[node name="JoinPrompt" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_bold_font")
theme_override_font_sizes/font_size = 32
text = "JOIN"
horizontal_alignment = 1

[node name="ReadyPrompt" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_bold_font")
theme_override_font_sizes/font_size = 32
text = "READY"
horizontal_alignment = 1

[node name="StartPrompt" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_bold_font")
theme_override_font_sizes/font_size = 32
text = "START"
horizontal_alignment = 1

[node name="InvitePrompt" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_bold_font")
theme_override_font_sizes/font_size = 32
text = "INVITE"
horizontal_alignment = 1

[node name="CopyPrompt" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_bold_font")
theme_override_font_sizes/font_size = 32
text = "STRG+C"
horizontal_alignment = 1

[node name="SpacerMiddle" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="BackPrompt" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_bold_font")
theme_override_font_sizes/font_size = 32
text = "BACK"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="TypedDisplay" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.898039, 1, 1)
theme_override_fonts/font = ExtResource("2_bold_font")
theme_override_font_sizes/font_size = 32
text = ""
horizontal_alignment = 1

[node name="PasteHint" type="Label" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.533333, 0.533333, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "STRG+V zum Einfuegen"
horizontal_alignment = 1

[node name="ServerInfo" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.333333, 0.333333, 0.4, 1)
theme_override_font_sizes/font_size = 12
text = "Server: 167.99.128.216:7777"
horizontal_alignment = 1
